aggiornate stats per usare file locali ed aggiunta interfaccia